# prac

./: .gitignore  CMakeLists.txt  a.out  before.c  dump  main.c  readme.md
examples/: NSRunningApplication.c  NSWorkspace.c
include/: NSArray.h  NSBase.h  NSNotificationCenter.h  NSObjects.h  NSRunningApplication.h  NSString.h  NSURL.h  NSWorkspace.h
source/: NSArray.c  NSNotificationCenter.c  NSRunningApplication.c  NSString.c  NSURL.c  NSWorkspace.c
